// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLight /> should match the snapshots 1`] = `
<DocumentFragment>
  .c2 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  margin-top: 0px;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c1:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

<div
    class="c0"
  >
    <input
      aria-label="selecione uma opção"
      hidden=""
      name=""
      type="text"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="abrir lista de itens"
      class="c1"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c2"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 2`] = `
<DocumentFragment>
  .c2 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  margin-top: 0px;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c1:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

<div
    class="c0"
  >
    <input
      aria-label="selecione uma opção"
      hidden=""
      name="dropdown-name"
      type="text"
      value=""
    />
    <button
      aria-haspopup="true"
      aria-label="abrir lista de itens"
      class="c1"
    >
      Select an option
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c2"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
